Add full page scroll style

--- a/index.html
+++ b/index.html
@@ -1,32 +1,45 @@
+<!DOCTYPE html>
 <html>
     <head>
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" >
+	<meta charset="UTF-8">
+	<title>CDAMAYAB</title>
 
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" ></script>
+	<link rel="stylesheet" href="css/main.css" />
+	<link rel="stylesheet" href="css/full_page_scroll.css" />
 
-		<!-- Load React -->
-		<script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script> <!-- development.js / production.min.js -->
-		<script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
-		<!-- Load React Components -->
-  		<script src="like_button.js"></script>
+
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" >
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" ></script>
+
+	
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   
-		<title></title>
     </head>
 
     <body>
+
 	<div id="navigation"></div>
-	<div id="header"></div>
-	<div id="content">
-	    <div id="presentation"></div>
-	    <div id="skills"></div>
-	    <div id="projects"></div>
-		<div id="experience"></div>
+	<div class="well" id="well">
+	    <div class="panel" id="header">header</div>
+	    <div class="panel" id="presentation">presentation</div>
+	    <div class="panel" id="skills">skills</div>
+	    <div class="panel" id="projects">projects</div>
 	</div>
 
 	<div id="footer"></div>
+	
 
+	<!-- Full page scroll -->
+	<script type="text/javascript" src="js/full_page_scroll.js"></script>
+
+	<!-- Load React -->
+	<script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script> <!-- development.js / production.min.js -->
+	<script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+	<!-- Load React Components -->
+  	<script src="js/com_presentacion.js"></script>
     </body>
 
 
