Fixed: React section modules

--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@
 	<!-- Load React -->
 	<script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script> <!-- development.js / production.min.js -->
 	<script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
-	<!-- Load React Components -->
-  	<script src="js/com_presentacion.js"></script>
+	<!-- Load React Components --><script>const e = React.createElement;</script>
+  	<script src="js/com_header.js"></script>
+	<script src="js/com_presentacion.js"></script>
+	<script src="js/com_skills.js"></script>
+	<script src="js/com_projects.js"></script>
+	
     </body>
 
 
