--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 		  dotColor: '#5cbdaa', //'#012345',
 		  lineColor: '#5cbdaa'//'#456789'
 		});
-		var intro = document.getElementById('intro');
-		intro.style.marginTop = - intro.offsetHeight / 2 + 'px';
+		var pan = document.getElementById('pan-left');
+		pan.style.marginTop = - pan.offsetHeight / 2 + 'px';
 	  }, false);
 	
 	</script>
